# agent_demo_llprf

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  main.py
app/agents/: common.py  planner.py  researcher.py  reviewer.py  writer.py
app/cache/: redis_cache.py
app/core/: config.py  logging.py
app/db/: base.py  checkpoint.py  models.py  session.py
app/graph/: builder.py  nodes.py  state.py
app/memory/: long_term.py
app/schemas/: memory.py  task.py
app/services/: task_service.py
app/tools/: memory_lookup.py
docs/: 01-overview.md  02-langchain-vs-langgraph.md  03-memory-and-cache.md  04-cli-and-api.md  05-walkthrough.md  06-study-guide.md
docs/superpowers/plans/: 2026-03-29-agent-demo-llprf.md  2026-03-30-learning-guide-comments.md
docs/superpowers/specs/: 2026-03-29-agent-demo-llprf-design.md
scripts/: init_db.py  run_demo.sh  seed_demo_data.py
tests/integration/: test_api.py
tests/unit/agents/: test_agent_outputs.py
tests/unit/cache/: test_redis_cache.py
tests/unit/cli/: test_cli.py
tests/unit/core/: test_config.py  test_logging.py
tests/unit/db/: test_init_db.py  test_models.py  test_python310_compat.py
tests/unit/graph/: test_workflow_paths.py
tests/unit/memory/: test_long_term_service.py
tests/unit/scripts/: test_run_demo_script.py
