[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_demo_llprf"
version = "0.1.0"
description = "中文教学型多智能体示例项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "typer>=0.12.3",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.1",
  "redis>=5.0.8",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.20",
  "langgraph-checkpoint-postgres>=2.0.1",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.2",
  "ruff>=0.6.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
